setting up utilities

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="images/company-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travellian</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/utilities.css" />
   </head>
   <body>
+    <h1 class="fs-primary-heading ff-primary">hello</h1>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
